--- a/hello-world.html
+++ b/hello-world.html
@@ -10,6 +10,13 @@
     <p> hello world</p>
     <h1> A programme to greet the world</h1>
     <p> How to greet the world in five languages</p>
-    
+
+    <ol>
+        <li> English: hello world</li>
+        <li> Yoruba: E n le o agabaye</li>
+        <li> Japanese: Konnichiwa, sekai! </li>
+        <li> French: Bonjour, monde!</li>
+        <li> </li>
+    </ol>
 </body>
 </html>
