add the 1 li on how to greet in 5 languages

--- a/hello-world.html
+++ b/hello-world.html
@@ -11,12 +11,20 @@
     <h1> A programme to greet the world</h1>
     <p> How to greet the world in five languages</p>
 
-    <ol>
-        <li> English: hello world</li>
+    <Ul>
+        <li> English: Hello world</li>
         <li> Yoruba: E n le o agabaye</li>
         <li> Japanese: Konnichiwa, sekai! </li>
         <li> French: Bonjour, monde!</li>
-        <li> </li>
-    </ol>
+        <li> Kinyarwanda: Mwirwe, isi!</li>
+    </Ul>
+
+
+    <h2> this is heading 2</h2>
+    <h3> this is heading 3</h3>
+    <h4> this is heading 4</h4>
+    <h5> this is heading 5</h5>
+    <h6> this is heading 6</h6>
+
 </body>
 </html>
